# email-demos

./: README.md  pyproject.toml
blastula-r/: README.md  simple-blastula.r
connect-python-exploration/: README.md  _quarto.yml  main.py  pyproject.toml  sample-email.qmd
connect-python-exploration/rsconnect-python/: connect-exploration.json  connect-python-exploration.json
connect-rmd-exploration/: README.md  create-connect-example.r  deploy-connect-example.r
existing-python-packages/: README.md  email-mime.qmd  envelopes.qmd  mailgun.qmd  mailtrap.qmd  main.py  playground.qmd  pyproject.toml  redmail.qmd  resend.qmd  sendgrid.qmd  yagmail.qmd
quarto-email/: .output_metadata.json  README.md  _quarto.yml  main.py  pyproject.toml  quarto-email-demo.html  quarto-email-demo.qmd
quarto-email/email-preview/: index.html
